--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -9,9 +9,9 @@ import FriendList from '@/components/links/FriendList.astro'
 import SchoolBubbles from '@/components/links/SchoolBubbles.astro'
 
 const headings = [
-  { depth: 2, slug: 'common-links', text: 'Common Links' },
-  { depth: 2, slug: 'special-links', text: 'Special Links' },
-  { depth: 2, slug: 'apply-links', text: 'Apply Links' }
+  { depth: 2, slug: 'common-links', text: '合作社区与机构' },
+  { depth: 2, slug: 'special-links', text: '合作企业' },
+  { depth: 2, slug: 'schools', text: '我们都来自' }
 ]
 
 const { orgs, friends, schools } = links
