--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,8 @@ const MAX_POSTS = 6
 const allPosts = await getBlogCollection()
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 const allActivities = await getCollection('activities')
-const recentActivities = allActivities.slice(0, 3)
+const nonDraftActivities = allActivities.filter(activity => !activity.data.draft)
+const recentActivities = nonDraftActivities.slice(0, 3)
 ---
 
 <PageLayout meta={{ title: 'Home' }} highlightColor='#5B8BB3'>
