--- a/src/pages/member-form.astro
+++ b/src/pages/member-form.astro
@@ -256,7 +256,7 @@ const headings = [
     <!-- 研究兴趣 -->
     <div class="bg-gray-0 p-6 rounded-lg">
       <h3 class="text-lg font-semibold mb-4 text-center text-black-700">研究兴趣</h3>
-      
+      <p>如果在选项中没有你的方向，可以直接在邮件中附上具体，内容，我们将会人工处理！</p>
       <div id="researchContainer">
         <div class="research-item border p-4 rounded mb-4">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
