--- a/src/pages/member-form.astro
+++ b/src/pages/member-form.astro
@@ -18,7 +18,7 @@ const headings = [
 
 
 
-<PageLayout title='' {headings} info='/member-form'>
+<PageLayout title='填写表单' {headings} info='/member-form'>
     <div class="flex justify-center mb-8">
         <Image 
           src={avatar} 
