--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -87,6 +87,11 @@ const headings = [
   <Timeline
     events={[
       {
+        date: '2025-08-15',
+        content:
+          'VapourX社区正式对外宣发，并且开始进行社区成员的招募。'
+      },
+      {
         date: '2025-08-11',
         content:
           '完成了基本的网站开发，成员开始进驻社区并且开始进行社区活动筹备。'
