--- a/src/pages/peoples/lain.astro
+++ b/src/pages/peoples/lain.astro
@@ -2,7 +2,7 @@
 import PersonProfile from '@/components/peoples/PersonProfile.astro'
 import { getMemberById } from '@/utils/members'
 
-const person = getMemberById('Rocky-Mu')
+const person = getMemberById('lain')
 
 if (!person) {
   return Astro.redirect('/404')
